# streamlit-i18n

./: .gitignore  README.md  Workspace.code-workspace  justfile
demo/: Home.py  demo.py
demo/lib/i18n/languages/: en.py  fr.py
demo/lib/i18n/locales/: es.yml
demo/tests/: conftest.py  test_i18n_demoapp.py
streamlit-i18n/: .pre-commit-config.yaml  README.md  justfile  pyproject.toml
streamlit-i18n-cli/: Justfile  README.md  pyproject.toml
streamlit-i18n-cli/src/streamlit_i18n_cli/: cli.py  generator.py
streamlit-i18n-cli/src/streamlit_i18n_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
streamlit-i18n-cli/src/streamlit_i18n_cli/templates/: justfile
streamlit-i18n-cli/src/streamlit_i18n_cli/templates/lib/: utilties.py
streamlit-i18n-cli/src/streamlit_i18n_cli/templates/lib/i18n/: __init__.py  dataclasses.py
streamlit-i18n-cli/src/streamlit_i18n_cli/templates/lib/i18n/languages/: de.py  es.py
streamlit-i18n-cli/src/streamlit_i18n_cli/templates/lib/i18n/locales/: de.yml  en.yml  fr.yml
streamlit-i18n-cli/src/streamlit_i18n_cli/templates/lib/ui/: __init__.py
streamlit-i18n-cli/src/streamlit_i18n_cli/templates/tests/: test_i18n_basis.py
streamlit-i18n/src/streamlit_i18n/: __init__.py
streamlit-i18n/src/streamlit_i18n.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
streamlit-i18n/tests/: conftest.py  test_runtime_basics.py  testimport_paths.py
