[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-i18n"
version = "0.2.0"
description = "Dataclass-based i18n runtime helpers for Streamlit projects"
authors = [{ name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bandit>=1.8.6",
    "black>=25.1.0",
    "codespell>=2.4.1",
    "docformatter>=1.7.7",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pyupgrade>=3.20.0",
    "PyYAML>=6.0.1",
    "ruff>=0.12.12",
]
license = {text = "MIT"}
keywords = ["streamlit", "i18n", "yaml", "dataclasses"]

[project.urls]
Homepage = "https://example.com/streamlit-i18n"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
py_version = 311

[tool.ruff]
target-version = "py311"
line-length = 100
# Let ruff replace flake8 & isort rules; keep isort hook if you want
lint.select = ["E","F","I","B","UP","SIM","PIE","PT","RUF"]
lint.ignore = []
exclude = ["lib/i18n/locales/*", ".venv/*", "build/*", "dist/*"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
pretty = true
warn_unreachable = true
